# harmony

./: .gitignore  LICENSE  README.md  demo.py  graph.pickle  pyproject.toml  requirements.txt
harmony/: graph.py  traversal.py
scripts/: construct_graph.py  count_tokens.py  load_stcced.py  picklify.py  raw_convert_pdf.py  split_stcced.py  test.py
