[tool.poetry]
name = "harmony"
version = "0.1.0"
description = ""
authors = ["Aniruddha Adhikary"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
tqdm = "^4.66.2"
tiktoken = "^0.6.0"
networkx = "^3.2.1"
pygraphviz = "^1.12"
openai = "^1.12.0"


[tool.poetry.group.parsing.dependencies]
pypdf2 = {extras = ["crypto"], version = "^3.0.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
